# Lab5_B91000

./: README.md
proyecto/: CMakeLists.txt  Makefile  datos.json  meson.build
proyecto/src/: json.c  json.h  main.c
